--- a/application.yaml
+++ b/application.yaml
@@ -1,15 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: myapp-argo-Application
+  name: myapp-argo-application
   namespace: argocd 
 spec: 
   project: default
 
   source: # the repo that hosts the app and the changes that might occure
-    repoURL: https://github.com/Onsarouri/myapplication.git
+    repoURL: https://github.com/Onsarouri/crud-app.git
     targetRevision: HEAD #last commits in my repo
-    path: crudapp
+    path: helm
 
   destination: #kube cluster
     server: https://kubernetes.default.svc #the ArgoCD is deployed on the same cluster
