trying to send these new changes to the new email address

--- a/helm/myapp-docker/values.yaml
+++ b/helm/myapp-docker/values.yaml
@@ -13,7 +13,7 @@ postgres:
   image: postgres:latest
   username: postgres
   password: admin
-  database: ONS
+  database: noted_db
   port: 5432
 
 ingress:
