Changes on argo-cm

--- a/argocd-notifications-secrets.yaml
+++ b/argocd-notifications-secrets.yaml
@@ -11,7 +11,7 @@ data:
     - name: on-sync-succeeded
       condition: app.status.operationState.phase == 'Succeeded'
       template: app-sync-succeeded
-    - name: on-health-degraded
+    - name: on-health-degrade
       condition: app.status.health.status == 'Degraded'
       template: app-health-degraded
     - name: on-sync-status-unknown
@@ -41,7 +41,7 @@ data:
       body: |
         Application {{.app.metadata.name}} sync status is unknown.
 
-  service.email: |
+  service.email.gmail: |
     hostSecret:
       name: email-credentials
       key: host
