--- a/argocd-cm.yaml
+++ b/argocd-cm.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  labels:
+    app.kubernetes.io/part-of: argocd
   name: argocd-cm
   namespace: argocd
 data:
