--- a/argocd-notifications-secrets.yaml
+++ b/argocd-notifications-secrets.yaml
@@ -11,37 +11,32 @@ data:
     - name: on-sync-succeeded
       condition: app.status.operationState.phase == 'Succeeded'
       template: app-sync-succeeded
-    - name: on-health-degrade
+    - name: on-health-degraded
       condition: app.status.health.status == 'Degraded'
       template: app-health-degraded
     - name: on-sync-status-unknown
       condition: app.status.operationState.phase == 'Unknown'
       template: sync-status-unknown
-
   templates: |
     - name: app-sync-failed
       title: Application {{.app.metadata.name}} sync operation failed
       body: |
         Application {{.app.metadata.name}} sync operation failed.
         {{if .app.status.operationState.message}}Message: {{.app.status.operationState.message}}{{end}}
-
     - name: app-sync-succeeded
       title: Application {{.app.metadata.name}} sync operation succeeded
       body: |
         Application {{.app.metadata.name}} sync operation succeeded.
-
     - name: app-health-degraded
       title: Application {{.app.metadata.name}} has degraded health
       body: |
         Application {{.app.metadata.name}} health status is degraded.
         {{if .app.status.health.message}}Message: {{.app.status.health.message}}{{end}}
-
     - name: sync-status-unknown
       title: Application {{.app.metadata.name}} has unknown sync status
       body: |
         Application {{.app.metadata.name}} sync status is unknown.
-
-  service.email.gmail: |
+  service.email: |
     hostSecret:
       name: email-credentials
       key: host
