--- a/argocd-cm.yaml
+++ b/argocd-cm.yaml
@@ -1,20 +1,15 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  labels:
-    app.kubernetes.io/part-of: argocd
   name: argocd-cm
   namespace: argocd
-data:
-  repositories: |
-    - url: https://github.com/Onsarouri/crud-app.git
-      type: git
-      usernameSecret:
-        name: email-credentials
-        key: username
-      passwordSecret:
-        name: email-credentials
-        key: password
+  
+  labels:
+    app.kubernetes.io/name: argocd-cm
+    app.kubernetes.io/part-of: argocd
 
-  notifications: |
-    configMap: argocd-notifications-cm
+data: 
+  timeout.reconciliation: 60s 
+
+  # notifications: |
+  #   configMap: argocd-notifications-cm
