This is the project of ArgoCD - Ons Arouri

--- a/argocd-notifications-secret.yaml
+++ b/argocd-notifications-secret.yaml
@@ -3,6 +3,8 @@ kind: Secret
 metadata:
   name: argocd-notifications-secret
 data:
-  email-username: $EMAIL_USER
-  email-password: $PASSWORD
+  email-username: b25zLmFyb3VyaWlAZ21haWwuY29t
+  email-password: Y2xkZGl0b2ZxaW15bnp0cQ==
+
 type: Opaque
+
