--- a/application.yaml
+++ b/application.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: myapp-argocd
   namespace: argocd
+  annotations:
+    notifications.argoproj.io/subscribe.on-sync-succeeded.gmail: ons.arouriii@gmail.com
 spec:
   project: default
   source:
